check if message warning exist before saving